styles.css
h1{
    color: white;
    background-color: #1F2937;
    font-size: 48px;
    font-weight: extra-bold;
}
link{
    font-size: 18px;
    color: #aeaeae;
}
a:link{
    color: #aeaeae;
}
a:visited{
    color: #aeaeae;
}
a:hover{
    color: #aeaeae;
}
a:active{
    color: #aeaeae;
}
h3{
    font-size: 24px;
    color: #F9FAF8;
}
button{
    color: #3882F6;
    background-color: #E5E7EB;
}
h2{
    font-size: 36px;
    font-weight: extra-bold;
    color: #1F2937;https://www.w3schools.com/css/css_background.asp
}
.flex-container{
    background-color: #E5E7EB;
    justify-content: center;
    border: rgb(42, 145, 255);
    flex: 1;
}
p{
    font-size: 15px;
    color: #dfe0df;
}
.topper{
    background-color: #1F2937;
}
.quote{
    font-weight: italics;
    font-size: 36px;
    color: #1F2937;
}
.author{
    font-weight: bold;
    font-size: 24px;
    color: #1F2937;
}
.topper{
    background-color: #1F2937;
    color: #dfe0df;
}

